chmura/static/css/timetable.css
#timetable {
	color: #666;
	font-size: 0.9em;
	
	margin: 0.5em;
	height: 1px;
}
#timetable td {
	text-align: center;
	
	min-width: 9em;
	max-width: 9em;
	box-sizing: border-box;
	padding: 0;
	height: 100%;
}
#timetable .lesson { padding: 0.83em 0.42em; }
#timetable div.lessonholder { display: table; border-collapse: collapse; height: 100%; width: 100%; }
#timetable div.lessonholder > div { display: table-row; }
#timetable div.lesson { display: table-cell; vertical-align: middle; margin-bottom: 2px; }
#timetable td.multilesson .lesson { display: none; }
#timetable .lesson p {
	margin: 0;
	line-height: 1.1em;
}
#timetable .lesson p:nth-of-type(1), #timetable .lesson p:nth-of-type(3) { font-weight: bold; }
#timetable a {
	text-transform: uppercase;
	font-size: 0.8em;
	text-decoration: dashed;
	
    text-decoration-line: underline;
	color: inherit;
}
#timetable .hiddenlesson { display: none !important; }

#overlaycontent .compactlesson { padding: 0.77em; }
#overlaycontent .compactlesson:not(:last-child) { margin-bottom: 2px; }
#overlaycontent .compactlesson p {
	color: #666;
	font-size: 0.9em;
	line-height: 1.1em;
	
	margin: 0;
}
#overlaycontent .compactlesson p:not(:nth-child(2)) { font-weight: bold; }

#overlaycontent p { margin-bottom: -6px; }
#overlaycontent select { margin-top: 6px; }

#mobiletimetableselect {
	position: fixed;
	bottom: 0;
	left: 0;
	right: 0;
	
	text-align: center;
	margin-bottom: 18px;
	padding: 4px 0;
	background-color: rgba(0, 0, 0, 0.5);

	display: none;
}

@media screen and (max-width: 1000px) {
	body {
		margin-top: -50px;
	}
	
	#timetablewrapper {
		position: fixed;
		top: 50px;
		left: 0;
		bottom: 0;
		right: 0;
		
		overflow: auto;
		
		padding-bottom: 38px;
	}
	#timetable {
		font-size: 0.6em;
	}
	
	#mobiletimetableselect { display: inline-block; }
	#overlaycontent .compactlesson { font-size: 0.6em; }
	#overlaywindow { padding: 6pt; }
	#overlaytitlebar { margin: 0 0 6pt; }
	#overlaytitlebar { font-size: inherit; }
	#overlayclose { height: 15px; width: auto; }
	#overlaycontent { max-height: 250px; }
}
@media screen and (max-width: 500px), screen and (max-height: 500px) {
	#timetable {
		font-size: 0.2em;
		border-spacing: 1px;
	}
	
	#mobiletimetableselect { margin-bottom: 0; }
	#timetablewrapper { padding-bottom: 36px; }
}

